<resources>
    <string name="app_name">FindTutor</string>
    <string name="btn_auth_text">Авторизация</string>
    <string name="reg">Регистрация</string>
    <string name="btn_about_text">О программе</string>
    <string name="password_hint">Пароль</string>
    <string name="phone_hint">Телефон</string>
    <string name="email_hint">Email</string>
    <string name="email_phone_hint">Email/Телефон</string>
    <string name="tutor_by_subject_template">Репетитор по %</string>
    <string name="name_hint">Имя</string>
    <string name="surname_hint">Фамилия</string>
    <string-array name="subjects">
        <item>Математика</item>
        <item>История</item>
        <item>Английский язык</item>
    </string-array>

    <string-array name="experience">
        <item>стаж: Менее года</item>
        <item>стаж: 1–3 лет</item>
        <item>стаж: 3–5 лет</item>
        <item>стаж: 5–10 лет</item>
        <item>стаж: Более 10 лет</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>